added handler logic for start api- have questions to complete
